src/test/ui/parser/issue-17904.stderr
error: expected one of `:`, `==`, or `=`, found `;`
  --> $DIR/issue-17904.rs:6:33
   |
LL | struct Foo<T> where T: Copy, (T); //~ ERROR expected one of `:`, `==`, or `=`, found `;`
   |                                 ^ expected one of `:`, `==`, or `=` here

error: aborting due to previous error

